--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,5 @@
 <footer class="footer">
     <div class="container-fluid">
-        <p class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}}, made with love by VN TEAM for a better web.
-        </p>
+        <!-- Copyright removed -->
     </div>
 </footer>
