--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -25,28 +25,10 @@
             </div>
             <ul class="navbar-nav" *ngIf="isDashboard()">
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">
-                        <i class="material-icons">dashboard</i>
-                        <p>
-                            <span class="d-lg-none d-md-block">Stats</span>
-                        </p>
-                    </a>
+                    <app-notification-dropdown></app-notification-dropdown>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" (click)="resetNotificationCount()">
-                        <i class="material-icons">notifications</i>
-                        <span class="notification" *ngIf="notificationCount > 0">{{ notificationCount }}</span>
-                        <p>
-                            <span class="d-lg-none d-md-block">Some Actions</span>
-                        </p>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="javascript:void(0)" *ngIf="notificationCount > 0">Có {{ notificationCount }} cập nhật nhiệt độ, độ ẩm mới</a>
-                        <a class="dropdown-item" href="javascript:void(0)" *ngIf="notificationCount === 0">Không có thông báo mới</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="javascript:void(0)" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link user-profile-link" href="javascript:void(0)" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="material-icons">person</i>
                         <span *ngIf="currentUser" class="user-name">{{ currentUser.displayName || currentUser.email }}</span>
                         <p>
@@ -84,12 +66,6 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="material-icons">dashboard</i>
-                        <p class="hidden-lg hidden-md">Dashboard</p>
-                    </a>
-                </li>
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="material-icons">notifications</i>
